[gd_scene load_steps=2 format=3 uid="uid://bc3c72heejk41"]

[ext_resource type="Script" uid="uid://b6fy78yvref7v" path="res://signals.gd" id="1_ig7tw"]

[node name="Main" type="Node"]
script = ExtResource("1_ig7tw")

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -182.60867
offset_top = -105.0
offset_right = 182.60867
offset_bottom = 105.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 51
text = "This is Label"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Player" type="Node" parent="."]

[node name="Graphics" type="Node" parent="Player"]

[node name="Weapon" type="Node" parent="Player"]

[node name="Enemy" type="Node" parent="."]

[node name="Button" type="Button" parent="."]
offset_right = 138.0
offset_bottom = 51.0
text = "PRINT MONEY"

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="level_up" from="." to="." method="_on_level_up"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
